# information-retrieval

./: .gitignore  LICENSE  README.md  candidates.py  main.py  pyproject.toml
BSBI/: BSBI.py  inverted_index.py  postings.py  utils.py
notebooks/: 01_query_analysis.ipynb  02_spelling_correction.ipynb
pa1-skeleton/: PA1-skeleton.ipynb  autograding_magics.py
pa1-skeleton/submission/: id_map.py  parse_block.py
pa1-skeleton/tmp/: test.dict  test.index
spelling_corrector/: candidate_generator.py  edit_probability_model.py  language_model.py  scorer.py
test/: test_bsbi.py  test_encoders.py  test_idmap.py  test_language_model.py  test_writer.py
